12-kuber/13-kuber_update/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-deployment
  labels:
    app: nginx-multitool
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx-multitool
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.0
        imagePullPolicy: IfNotPresent
      - name: multitool
        image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent
