12-kuber/13-kuber_update/canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-blue-deployment
  labels:
    app: nginx-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-blue
  template:
    metadata:
      labels:
        app: nginx-blue
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: index-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: index-volume
        configMap:
          name: nginx-blue-configmap

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-green-deployment
  labels:
    app: nginx-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-green
  template:
    metadata:
      labels:
        app: nginx-green
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: index-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: index-volume
        configMap:
          name: nginx-green-configmap

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-blue-svc
spec:
  type: ClusterIP
  ports:
  - name: nginx-port
    port: 80
    protocol: TCP
  selector:
    app: nginx-blue
  
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-green-svc
spec:
  type: ClusterIP
  ports:
  - name: nginx-port
    port: 80
    protocol: TCP
  selector:
    app: nginx-green

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-blue-svc
            port: 
              name: nginx-port

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    #nginx.ingress.kubernetes.io/canary-weight: "50"    
    nginx.ingress.kubernetes.io/canary-by-header: "x-canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "want green"    
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-green-svc
            port: 
              name: nginx-port
